Add `Image` class with PNG saving and associated unit tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,12 @@ option(ENABLE_TESTS "Enable testing" OFF)
 
 set(HEADER_FILES
         include/app/ArgumentsParser.hpp
+        include/core/Image.hpp
 )
 
 set(SOURCE_FILES
         src/app/ArgumentsParser.cpp
+        src/core/Image.cpp
 )
 
 set(PROJECT_LIB ${PROJECT_NAME}_lib)
