Add `RootsTable` class with tests and refactor error handling across components.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ FetchContent_MakeAvailable(googletest)
 set(TEST_SOURCES
         src/app/ArgumentsParserTest.cpp
         src/core/ImageTest.cpp
+        src/core/RootsTableTest.cpp
 )
 
 set(TEST_TARGET runTests)
