--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,6 +14,7 @@ set(TEST_SOURCES
         src/app/ArgumentsParserTest.cpp
         src/core/ImageTest.cpp
         src/core/RootsTableTest.cpp
+        src/core/RenderNewtonTest.cpp
 )
 
 set(TEST_TARGET runTests)
