--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,20 @@ jobs:
         with:
           arch: x64
 
+      - name: Install ISPC (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ispc
+
+      - name: Install ISPC (macOS)
+        if: matrix.os == 'macos-latest'
+        run: brew install ispc
+
+      - name: Install ISPC (Windows)
+        if: matrix.os == 'windows-latest'
+        run: choco install ispc --no-progress --yes
+
       - name: Set reusable strings
         id: strings
         shell: bash
